# autom8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  archive-win32.sh  archive-win64.sh  autom8-curses.sln  autom8.sln  changelog.txt  clean-nix.sh  license.txt  readme.md
.cmake/: ConfigureBsdPaths.cmake  ConfigureCompilerFlags.cmake  InstallFiles.cmake  InstallSymlink.cmake
script/: archive-win32.sh  patch-rpath.sh  post-build.sh  stage-static-assets.sh  strip-binaries.sh  update-version.sh
src/android/: .gitignore  build.gradle
src/android/app/: build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/java/org/clangen/autom8/service/: ClientService.java
src/android/app/src/main/res/layout/: devices_activity.xml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/app/: CMakeLists.txt  autom8-curses.vcxproj  autom8-curses.vcxproj.filters  autom8.rc  autom8.vcxproj  cursespp-sample.vcxproj  main.cpp
src/app/adapter/: DeviceListAdapter.cpp  DeviceListAdapter.h  DeviceModelAdapter.cpp  DeviceModelAdapter.h
src/app/data/locales/: en_US.json
src/app/layout/: ClientLayout.cpp  ClientLayout.h  ConsoleLayout.cpp  ConsoleLayout.h  MainLayout.cpp  MainLayout.h  SettingsLayout.cpp  SettingsLayout.h
src/app/overlay/: DeviceEditOverlay.cpp  DeviceEditOverlay.h
src/app/util/: ConsoleLogger.cpp  ConsoleLogger.h  Device.cpp  Device.h  Message.cpp  Message.h  Settings.cpp  Settings.h
src/cm15a_controller/: cm15a_controller.cpp  cm15a_controller.hpp  cm15a_controller.vcxproj  stdafx.cpp  stdafx.h
src/daemon/: CMakeLists.txt  daemon.h  main.cpp
src/libautom8/: CMakeLists.txt  autom8.cpp  autom8.rc  libautom8.vcxproj  libautom8.vcxproj.filters  main.cpp
src/libautom8/db/: db.cpp
src/libautom8/device/: device_base.cpp  device_model.cpp  device_system.cpp  null_device_system.cpp  simple_device.cpp
src/libautom8/device/x10/: x10_appliance.cpp  x10_device.cpp  x10_device_factory.cpp  x10_lamp.cpp  x10_security_sensor.cpp
src/libautom8/device/x10/cm15a/: cm15a_device_system.cpp
src/libautom8/device/x10/mochad/: mochad_controller.cpp  mochad_device_system.cpp
src/libautom8/include/autom8/: constants.h  version.h
src/libautom8/include/autom8/db/: db.hpp
src/libautom8/include/autom8/device/: device_base.hpp  device_factory.hpp  device_model.hpp  device_system.hpp  null_device_system.hpp  simple_device.hpp
src/libautom8/include/autom8/device/x10/: x10_appliance.hpp  x10_device.hpp  x10_device_controller.hpp  x10_device_factory.hpp  x10_device_system.hpp  x10_lamp.hpp  x10_security_sensor.hpp
src/libautom8/include/autom8/device/x10/cm15a/: cm15a_device_system.hpp
src/libautom8/include/autom8/device/x10/mochad/: mochad_controller.hpp  mochad_device_system.hpp
src/libautom8/include/autom8/message/: common_messages.hpp  message.hpp  message_formatter.hpp  message_matcher.hpp  message_queue.hpp  request.hpp  request_handler.hpp  request_handler_factory.hpp  request_handler_registrar.hpp  response.hpp
src/libautom8/include/autom8/message/requests/: get_device_list.hpp  get_security_alert_count.hpp  send_device_command.hpp
src/libautom8/include/autom8/net/: client.hpp  server.hpp  session.hpp
src/libautom8/include/autom8/plugin/: plugin.hpp  plugin_factory.hpp
src/libautom8/include/autom8/util/: debug.hpp  json.hpp  preferences.hpp  signal_handler.hpp  ssl_certificate.hpp  utility.hpp
src/libautom8/message/: common_messages.cpp  message.cpp  request.cpp  request_handler_factory.cpp  request_handler_registrar.cpp  response.cpp
src/libautom8/message/requests/: get_device_list.cpp  get_security_alert_count.cpp  send_device_command.cpp
src/libautom8/net/: client.cpp  server.cpp  session.cpp
src/libautom8/plugin/: plugin_factory.cpp
src/libautom8/util/: debug.cpp  json.cpp  preferences.cpp  ssl_certificate.cpp  utility.cpp
